apps/base/gatus/release/httproute.yaml
# yaml-language-server: $schema=https://ctrl-research.github.io/k8s-schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus-internal
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
  hostnames:
  - gatus.j6n.internal
  rules:
  - backendRefs:
    - name: gatus
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus-external
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
  hostnames:
  - status.j6n.dev
  rules:
  - backendRefs:
    - name: gatus
      port: 80
